hphp/hack/test/typecheck/tconst/subsume_tconst3.php.exp
File "subsume_tconst3.php", line 7, characters 7-7:
This object is of type C (Typing[4110])
File "subsume_tconst3.php", line 7, characters 17-17:
It is incompatible with this object of type P
because some declarations are incompatible.
Read the following to see why:
File "subsume_tconst3.php", line 8, characters 14-14:
The assigned type of this type constant is inconsistent with its parent
File "subsume_tconst3.php", line 4, characters 30-35:
This is a string
File "subsume_tconst3.php", line 8, characters 18-20:
It is incompatible with an int
